# agentbridge-mcp

./: .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  client.py  mcp_config.example.json  mcp_config.json  pyproject.toml  requirements.txt  server.py  tools.py
agentbridge/: __init__.py  client.py  types.py
examples/: __init__.py  langchain_integration.py  requirements-langchain.txt
scripts/: generate_mcp_service.py
services/: __init__.py  agentbridge.py  base.py  bp_toolkit.py  tempo_actor_control.py  tempo_agents_editor.py  tempo_core.py  tempo_core_editor.py  tempo_geographic.py  tempo_labels.py  tempo_map_query.py  tempo_movement.py  tempo_sensors.py  tempo_time.py  tempo_world_state.py
tests/: __init__.py  test_client.py  test_grpc.py  test_wishlist.py
